# sbitx-mainline

./: .gitignore  CMakeLists.txt  README.md  fft_filter.c  modem_ft8.c  sbitx  sbitx.c  sbitx_gtk.c  sbitx_sound.c  telnet.c  update.sh  webserver.c
doc/: install.md
ft8_lib/: CMakeLists.txt  decode_ft82.c
